@uppy/dashboard: Fix low-contrast hover styles (#4347)
Fix low-contrast hover styles on Dashboard icons

--- a/packages/@uppy/dashboard/src/style.scss
+++ b/packages/@uppy/dashboard/src/style.scss
@@ -470,7 +470,7 @@
 }
 
 .uppy-DashboardTab-btn:hover {
-  background-color: $gray-100--highlighted;
+  background-color: $gray-200--highlighted;
 
   [data-uppy-theme="dark"] & {
     background-color: $gray-800;
